Widget Accordion Tabs

--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -9,3 +9,19 @@
 	-ms-user-select: none;
 	user-select: none;
 }
+
+.customize-control-widget_form .widget {
+	margin-bottom: 0;
+}
+
+.customize-control-widget_form .widget .widget-top {
+	cursor: default;
+}
+
+.customize-control-widget_form .widget .widget-top a {
+	cursor: pointer;
+}
+
+.customize-control-widget_form .widget-inside.visible {
+	display:block;
+}
