Add box to widget control, when a widget preview is click. Adds effects to editing widgets, border effect on control hover, and scrolls to widget on input click.

--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -9,3 +9,9 @@
 	-ms-user-select: none;
 	user-select: none;
 }
+
+.selected{
+	border-radius: 3px;
+    outline: 'none';
+	box-shadow: 0 0 5px #CE0000;
+}
