--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -1,6 +1,7 @@
 .customize-control-widget_form.previewer-loading .spinner {
 	display: inline;
 }
+
 .customize-control-widget_form.widget-form-loading .widget-content {
 	opacity: 0.7;
 	pointer-events: none;
@@ -21,6 +22,11 @@
 .customize-control-widget_form .widget .widget-top a {
 	cursor: pointer;
 }
+
+.customize-control-widget_form .widget .customize-control-title {
+	cursor: move;
+}
+
 .control-section.accordion-section.widget-customizer-highlighted > .accordion-section-title,
 .customize-control-widget_form.widget-customizer-highlighted {
 	border-radius: 2 px;
