Add control for managing ordering of widgets in sidebar

--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -1,3 +1,7 @@
+customize-control-sidebar_widgets {
+	display: none;
+}
+
 .customize-control-widget_form.previewer-loading .spinner {
 	display: inline;
 }
