Eliminate duplicated code by re-using wp_widget_control
Remove code specific to widget addition since not yet available
Cleanup dead code

--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -1,5 +1,12 @@
 customize-control-sidebar_widgets {
 	display: none;
+ 
+.customize-control-sidebar_widgets .hide-if-js {
+	display: none; /* the link in here will fail if it ever gets used */
+}
+
+.customize-control-widget_form .widget-control-actions .alignleft {
+	display: none; /* We will show this again once we add Delete support */
 }
 
 .customize-control-widget_form.previewer-loading .spinner {
