Override MP6-introduced color from white back to black
Some of the text in widget controls was becoming white because MP6
changes the color scheme of accordions from dark on light to light on
dark. But the forms are still light, so the text inside needs to
remain dark.

Fixes #33

--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -44,3 +44,8 @@
 	outline: none;
 	box-shadow: 0 0 3px #CE0000;
 }
+
+/* MP6-compat */
+#customize-theme-controls .accordion-section-content .widget {
+	color: black;
+}
