Export available widgets to JS and add widget select

--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -1,4 +1,4 @@
-.customize-control-sidebar_widgets {
+.customize-control-sidebar_widgets label {
 	display: none;
 }
 .customize-control-sidebar_widgets .hide-if-js {
