--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -20,6 +20,13 @@
 
 .customize-control-widget_form .widget {
 	margin-bottom: 0;
+
+	/**
+	 * Prevent plugins (e.g. Widget Visibility in Jetpack) from forcing widget forms
+	 * to be wide and so overflow the customizer panel
+	 */
+	left: auto !important;
+	max-width: 100%;
 }
 
 .customize-control-widget_form .widget .widget-top {
