--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -84,6 +84,10 @@ div#widgets-right .ui-sortable .widget {
 	margin: 0px -20px -23px -20px;
 	text-align: right;
 	transition: all 0.2s;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 .add-new-widget:hover {
 	opacity: 0.8;
