--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -29,6 +29,12 @@
 	max-width: 100%;
 }
 
+.customize-control-widget_form .widget-inside {
+	border-top: none;
+	padding: 1px 15px 15px 15px;
+	line-height: 16px;
+}
+
 .customize-control-widget_form .widget .widget-top {
 	cursor: default;
 }
