--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -173,7 +173,8 @@
 	border-bottom: 1px solid rgba(0,0,0,0.05);
 	position: relative;
 }
-#available-widgets .widget-tpl:hover {
+#available-widgets .widget-tpl:hover,
+#available-widgets .widget-tpl.selected {
 	box-shadow: inset 0 1px 0 rgba(0,0,0,0.05);
 	background: rgba(0,0,0,0.05);
 }
