--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -50,7 +50,7 @@
 }
 
 .customize-control-widget_form .widget .widget-inside {
-	padding: 0 10px 10px 10px;
+	padding: 1px 10px 10px 10px;
 }
 
 .customize-control-widget_form .widget .customize-control-title {
