--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -1,3 +1,12 @@
+
+/**
+ * Hide all sidebar sections by default, only show them (via JS) once the
+ * preview loads and we know whether the sidebars are used in the template.
+ */
+.control-section[id^="accordion-section-sidebar-widgets-"] {
+	display:none;
+}
+
 .customize-control-sidebar_widgets label {
 	display: none;
 }
