Fade widgets not rendered in sidebars on currently-previewed URL
A 50% opacity is applied to the widget form controls when the widget
is not rendered in the preview, for example if the Jetpack Widget
Visibility module is used to exclude the widget from the page.

When navigating to other URLs in the preview, the appearance of the
widget controls will update based on whether or not the widget is
rendered on the newly-previewed URL. As such, this is the same
behavior as the sidebar sections.

Also fixed bug in relation to Widget Visibility where widgets not
initially-rendered in the preview could not then subsequently be
updated or previewed.

Fixes #65

--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -14,6 +14,17 @@
 	display: none; /* the link in here will fail if it ever gets used */
 }
 
+.customize-control-widget_form .widget-top {
+	-webkit-transition: opacity 0.5s;
+	-moz-transition:    opacity 0.5s;
+	-ms-transition:     opacity 0.5s;
+	-o-transition:      opacity 0.5s;
+	transition:         opacity 0.5s;
+}
+.customize-control-widget_form:not(.widget-rendered) .widget-top {
+	opacity: 0.5;
+}
+
 .customize-control-widget_form.previewer-loading .spinner {
 	display: inline;
 }
