Wrap available-widgets in widgets-left for compat
Some plugins manipulate the widget templates, and they may search for
them using the #widgets-left selector, which is the containing element
on the widgets admin page.

Fixes #51

--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -146,6 +146,11 @@
 #available-widgets .widget {
 	position: static;
 }
+/* override widgets admin page rules in wp-admin/css/wp-admin.css */
+#widgets-left #available-widgets .widget {
+	float: none !important;
+	width: auto !important;
+}
 .add-new-widget b {
 	padding-left: 8px;
 }
