--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -1,4 +1,17 @@
 
+@font-face {
+    font-family: 'widgeticons';
+    src: url('fonts/widgeticons-regular.eot');
+    src: url('fonts/widgeticons-regular.eot?#iefix') format('embedded-opentype'),
+         url('fonts/widgeticons-regular.woff') format('woff'),
+         url('fonts/widgeticons-regular.ttf') format('truetype'),
+         url('fonts/widgeticons-regular.svg#widgeticonsregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
 /**
  * Hide all sidebar sections by default, only show them (via JS) once the
  * preview loads and we know whether the sidebars are used in the template.
@@ -186,12 +199,87 @@
 	box-shadow: inset 0 1px 0 rgba(0,0,0,0.05);
 	background: rgba(0,0,0,0.05);
 }
-#available-widgets .widget-icon {
+img.widget-icon {
+	display: none;
+}
+.widget-icon {
 	position: absolute;
 	top: 20px;
 	left: 20px;
 	height: 24px;
 	width: 24px;
+	box-sizing: border-box;
+}
+.widget-icon:before {
+	content:"\f132";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	color: #333;
+	font: normal 24px/24px 'dashicons', 'widgeticons';
+	text-align: center;
+	-webkit-border-radius: 2px;
+	border-radius: 2px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-font-smoothing: antialiased;
+}
+[class*="archives"] .widget-icon:before {
+	content: "\f483";
+	top: -2px;
+}
+[class*="calendar"] .widget-icon:before {
+	content: "\f145";
+}
+[class*="categories"] .widget-icon:before {
+	content: "\f318";
+	top: -3px;
+}
+[class*="nav"] .widget-icon:before {
+	content: "\f333";
+}
+[class*="rss"] .widget-icon:before {
+	content: "\f303";
+	top: -3px;
+	font-size: 20px;
+}
+[class*="tag_cloud"] .widget-icon:before {
+	content: "\f481";
+}
+[class*="search"] .widget-icon:before {
+	content: "\f179";
+}
+[class*="text"] .widget-icon:before {
+	content: "\f480";
+}
+[class*="twitter"] .widget-icon:before {
+	top: -1px;
+	content: "\f301";
+}
+[class*="posts"] .widget-icon:before {
+	content: "\f109";
+}
+[class*="pages"] .widget-icon:before {
+	content: "\f119";
+}
+[class*="comments"] .widget-icon:before {
+	content: "\f101";
+}
+[class*="profile"] .widget-icon:before,
+[class*="grofile"] .widget-icon:before {
+	content: "\f110";
+}
+[class*="facebook"] .widget-icon:before {
+	content: "\f304";
+}
+[class*="image"] .widget-icon:before {
+	content: "\f128";
+}
+[class*="meta"] .widget-icon:before {
+	content: "\f120";
 }
 #available-widgets .widget-top,
 #available-widgets .widget-top:hover {
