--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -115,7 +115,6 @@
 	float: left;
 	clear: left;
 	margin: 14px 10px 0 10px;
-	/*font-weight: 600;*/
 	text-decoration: none;
 	cursor: pointer;
 	outline: none;
@@ -123,6 +122,9 @@
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+}
+.reorder-toggle:focus {
+	outline: 1px dotted;
 }
 
 .reorder-done,
@@ -153,7 +155,7 @@
 	float: left;
 	display: block;
 	width: 33px; /* was 42px for mobile */
-	height: 40px;
+	height: 43px;
 	color: #888;
 	text-indent: -9999px;
 	cursor: pointer;
@@ -167,7 +169,7 @@
 	right: 0;
 	width: 100%;
 	height: 100%;
-	font: normal normal 20px/40px 'Genericons';
+	font: normal normal 20px/43px 'Genericons';
 	text-align: center;
 	text-indent: 0;
 }
@@ -175,6 +177,7 @@
 .widget-reorder-nav span:hover,
 .widget-reorder-nav span:focus {
 	color: #444;
+	background: #eee;
 }
 
 .move-widget:before {
@@ -230,7 +233,6 @@
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
-	outline: none;
 }
 
 #customize-theme-controls .widget-area-select li:before {
