Show only one expanded widget control at a time
Prevents abundance of expanded widget controls from cluttering up the customizer.
Solves problem of wide widget controls from appearing over each other.

When one wide widget is expanding while another is collapsing,
the expanding one will always have a higher z-index than the collapsing one.

--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -86,6 +86,10 @@
 	-webkit-transition: background 0.2s;
 	transition: background 0.2s;
 }
+.customize-control-widget_form.wide-widget-control.collapsing .widget-inside {
+	z-index: -2;
+}
+
 .customize-control-widget_form.wide-widget-control.expanded:hover .widget-title {
 	background: #eee;
 }
