--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -50,11 +50,33 @@
 	opacity: 0.5;
 }
 
-.customize-control-widget_form.previewer-loading .spinner {
-	display: inline;
+.customize-control-widget_form .widget-content input,
+.customize-control-widget_form .widget-content select,
+.customize-control-widget_form .widget-content textarea {
+	-webkit-transition: background-color 0.2s;
+	transition: background-color 0.2s;
+}
+.customize-control-widget_form .widget-content .client-invalid,
+.customize-control-widget_form .widget-content .server-invalid {
+	background-color: #ffeeee;
 }
 
-.customize-control-widget_form.widget-form-loading .widget-content {
+
+.customize-control-widget_form.is-live-previewable .widget-control-save {
+	display: none;
+}
+
+.customize-control-widget_form .spinner {
+	display: inline;
+	opacity: 0.0;
+	-webkit-transition: opacity 0.1s;
+	transition: opacity 0.1s;
+}
+.customize-control-widget_form.previewer-loading .spinner {
+	opacity: 1.0;
+}
+
+.customize-control-widget_form.widget-form-loading:not(.is-live-previewable) .widget-content {
 	opacity: 0.7;
 	pointer-events: none;
 	-moz-user-select: none;
