Remove partial preview refreshing
The code removed here should be generalized so that any customizer
control can do partial refreshes of the preview. Such refreshes are
necessary for non-trivial components since a postMessage transport
currently requires all of the logic for rendering the setting change
to be implemented both in JavaScript and PHP, and this redundancy
violates DRY.

--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -51,7 +51,7 @@
 }
 
 
-.customize-control-widget_form.is-live-previewable .widget-control-save {
+.customize-control-widget_form .widget-control-save {
 	display: none;
 }
 
@@ -63,15 +63,6 @@
 }
 .customize-control-widget_form.previewer-loading .spinner {
 	opacity: 1.0;
-}
-
-.customize-control-widget_form.widget-form-loading:not(.is-live-previewable) .widget-content {
-	opacity: 0.7;
-	pointer-events: none;
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
 }
 
 .customize-control-widget_form .widget {
